# neural-operator-learning

./: README.md  bayesian_optimization.ipynb  cnn.ipynb  decision_trees.ipynb  gaussian_process.ipynb  igpu_benchmarking.ipynb  kla.ipynb  nn_ginn.ipynb  nn_ginn_gp.ipynb  pyproject.toml
